vbnc/vbnc/tests/Errors/30337-1.vb
Module bug
    Sub Main()
        For i As Boolean = 1 To 2

        Next
    End Sub
End Module